# SelfForge

./: .env.example  .gitattributes  .gitignore  Agents.md  Cargo.toml  README.md
.github/workflows/: ci.yml
forge/architecture/: project-structure.md
forge/architecture/agent-rules/: README.md  agent-coordination.md  ai-provider.md  archives-memory.md  code-architecture.md  git-pr.md  patch-flow.md  project-structure.md  (+2 more)
forge/errors/: v0.md
forge/memory/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.md  v1.md  v2.md
forge/tasks/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.md  v1.md  v2.md
forge/versions/: legacy.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.md  v0.md  v1.md  v2.md
runtime/: README.md
src/: documentation.rs  evolution.rs  layout.rs  lib.rs  main.rs  runtime.rs  state.rs  supervisor.rs  version.rs
src/app/: ai_provider.rs  error_archive.rs  memory.rs  minimal_loop.rs  mod.rs  self_evolution_loop.rs
src/cli/: agent_work_status.rs  mod.rs  self_evolution_loop.rs
src/tests/: agent_core.rs  ai_provider.rs  app_loop.rs  layout_version.rs  memory.rs  mod.rs  patch_draft_flow.rs  patch_source_flow.rs  runtime_error.rs
state/: state.json
supervisor/: README.md
workspaces/v0/: .gitignore  README.md
workspaces/v0.1.0/: README.md
workspaces/v0.1.1/: README.md
workspaces/v0.1.2/: README.md
workspaces/v0.1.3/: README.md
workspaces/v0.1.4/: README.md
workspaces/v0.1.5/: README.md
workspaces/v0.1.6/: README.md
workspaces/v1/: README.md
workspaces/v2/: README.md
(+81 files in other folders)
