[package]
name = "SelfForge"
version = "0.1.30"
edition = "2024"

[lib]
name = "self_forge"
path = "src/lib.rs"

[[bin]]
name = "selfforge"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
